[gd_scene load_steps=5 format=3 uid="uid://db3su6jf3x2ij"]

[ext_resource type="Script" uid="uid://de4iqvnhluaqe" path="res://Objects/SlidingDoor/sliding_door.gd" id="1_ru05i"]
[ext_resource type="SpriteFrames" uid="uid://0o47lrumkbjx" path="res://Resources/Animations/sliding_door_animations.tres" id="2_foxl1"]
[ext_resource type="AudioStream" uid="uid://cqc5afm73e3l1" path="res://Imports/Free Sounds Pack/Cash Register 1-2.wav" id="3_vp6u1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xiyhu"]
size = Vector2(14, 8)

[node name="SlidingDoor" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_ru05i")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("2_foxl1")
animation = &"open"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 12)
shape = SubResource("RectangleShape2D_xiyhu")

[node name="SoundEffectTimer" type="Timer" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_vp6u1")
volume_db = -15.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
